<resources>
    <string name="app_name">TrailX</string>
    <string name="tela_inicial">Tela Inicial</string>
    <string name="sobre">Sobre</string>
    <string name="creditos_titulo">Créditos</string>
    <string name="creditos">A codificação do app foi feita com ajuda dos assuntos abordados nas aulas como sharedPrefeences,radioButton, métodos onCreate, onClick... . Video aulas no youtube, no alura e fóruns na internet ajudaram bastante também. Já a prototipação da parte visual do app foi utilizado o figma e o IconKitchen\", sequencialmente a criação do arquivo xml background_button para a padronização dos botões. Na internalização do app foi criado um dois arquivos strings xml para a definição dos textos em outros idiomas.</string>
    <string name="fazer_trilha_botao">Fazer Trilha</string>
    <string name="gerenciar_trilha_botao">Gerenciar Trilha</string>
    <string name="compartilhar_trilha_botao">Compartilhar Trilha</string>
    <string name="fazer_trilha">Fazer Trilha</string>
    <string name="configuracoes_botao">Configurações</string>
    <string name="sobre_botao">Sobre</string>
    <string name="registrar_trilha_botao">Registrar Trilha</string>
    <string name="compartilhar_trilha">Compartilhar Trilha</string>
    <string name="gereniciar_trilha">Gerenciar Trilha</string>
    <string name="configuracoes">Configurações</string>
    <string name="tela_configuracoes">Tela de Configurações</string>
    <string name="coordenadas">Formato das Coordenadas Geográficas:</string>
    <string name="graus">Graus [+/-DDD.DDDDD]</string>
    <string name="graus_minutos">Graus-Minutos [+/-DDD:MM.MMMMM]</string>
    <string name="graus_minutos_segundos">Graus-Minutos-Segundos [+/-DDD:MM:SS.SSSSS]</string>
    <string name="orientacao">Orientação do Mapa:</string>
    <string name="nenhuma">Nenhuma</string>
    <string name="vetorial">Vetorial</string>
    <string name="satelite">Satélite</string>
    <string name="unidade_velocidade">Unidade de Velocidade:</string>
    <string name="tipo_mapa">Tipo de Mapa:</string>
    <string name="tela_gerenciar">Gerenciar Trilha</string>
    <string name="tela_compartilhar">Compartilhar Trilha</string>
</resources>