<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#1E1E1E"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/tela_inicial"
        app:titleTextColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistrarTrilha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_button"
        android:text="@string/registrar_trilha_botao"
        android:padding="20dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGerenciarTrilha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegistrarTrilha"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_button"
        android:text="@string/gerenciar_trilha_botao"
        android:padding="20dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCompartilharTrilha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnGerenciarTrilha"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_button"
        android:text="@string/compartilhar_trilha_botao"
        android:padding="20dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfiguracoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCompartilharTrilha"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_button"
        android:text="@string/configuracoes_botao"
        android:padding="20dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnConfiguracoes"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_button"
        android:text="@string/sobre_botao"
        android:padding="20dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>